--- a/WishList/Views/Shared/Error.cshtml
+++ b/WishList/Views/Shared/Error.cshtml
@@ -3,4 +3,11 @@
 *@
 @{
 }
-<p>An Error has occured. Please try again</p>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <p>An Error has occured. Please try again</p>
+    </body>
+</html>
